fixed some db queries added like function api
