# service/api/like-actions-handler.go
@@ -1,0 +1,37 @@
+package api
+
+import (
+	"net/http"
+
+	"github.com/julienschmidt/httprouter"
+	"github.com/neoSnakex34/WasaPhoto/service/api/reqcontext"
+	"github.com/neoSnakex34/WasaPhoto/service/structs"
+)
+
+func (rt *_router) likePhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	photoId := structs.Identifier{Id: ps.ByName("photoId")}
+	likerId := structs.Identifier{Id: ps.ByName("likerId")}
+
+	if photoId.Id == "" || likerId.Id == "" {
+		w.WriteHeader(http.StatusBadRequest)
+		ctx.Logger.Error("photoId or likerId has not been provided")
+		return
+	}
+
+	authorization := r.Header.Get("Authorization")
+	if likerId.Id != authorization {
+		w.WriteHeader(http.StatusForbidden)
+		ctx.Logger.Error("user is not allowed to like photo") // not loggeed in
+		return
+	}
+
+	err := rt.db.LikePhoto(photoId, likerId)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+		ctx.Logger.Error("an error occured while liking the photo: ", err)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+	ctx.Logger.Info("photo liked successfully")
+}
